# lwgeom

./: .Rbuildignore  .gitattributes  .gitignore  .travis.yml  404.html  CONDUCT.html  DESCRIPTION  NAMESPACE  NEWS.md  README.md  _pkgdown.yml  appveyor.yml  authors.html  authors.md  cleanup  codecov.yml  config.status  configure  configure.ac  index.html  index.md  llms.txt  pkgdown.yml  proj_conf_test  search.json  sitemap.xml  tic.R
.github/workflows/: R-CMD-check.yaml  tic.yml
R/: RcppExports.R  bearing.R  bounding_circle.R  clockwise.R  endpoint.R  geod.R  geodetic.R  geohash.R  init.R  perimeter.R  snap_to_grid.R  split.R  startpoint.R  subdivide.R  transform.R  twkb.R  valid.R  wkt.R  wrap_x.R
docs/: authors.html  index.html
docs/reference/: bounding_circle.html  index.html  lw_geodetic.html  lwgeom_extSoftVersion.html  st_as_sfc.TWKB.html  st_geod_azimuth.html  st_geohash.html  st_split.html  st_subdivide.html  st_transform_proj.html  valid.html
man/: bounding_circle.Rd  geod.Rd  lw_geodetic.Rd  lwgeom_extSoftVersion.Rd  lwgeom_make_valid.Rd  lwgeom_version.Rd  perimeter-deprecated.Rd  perimeter.Rd  st_as_sfc.TWKB.Rd  st_astext.Rd  st_endpoint.Rd  st_force_polygon_cw.Rd  st_geod_azimuth.Rd  st_geohash.Rd  st_is_polygon_cw.Rd  st_linesubstring.Rd  st_snap_to_grid.Rd  st_split.Rd  st_startpoint.Rd  st_subdivide.Rd  st_transform_proj.Rd  st_wrap_x.Rd  valid.Rd
news/: index.html  index.md
reference/: bounding_circle.html  bounding_circle.md  geod.html  geod.md  index.html  index.md  lwgeom_extSoftVersion.html  lwgeom_extSoftVersion.md  lwgeom_make_valid.html  lwgeom_make_valid.md  perimeter-deprecated.html  perimeter-deprecated.md  perimeter.html  perimeter.md  st_as_sfc.TWKB.html  st_as_sfc.TWKB.md  st_asewkt.html  st_astext.html  st_astext.md  st_endpoint.html  st_force_polygon_cw.html  st_force_polygon_cw.md  st_geod_azimuth.html  st_geod_azimuth.md  st_geod_covers.html  st_geohash.html  st_geohash.md  st_geom_from_geohash.html  st_is_polygon_cw.html  st_is_polygon_cw.md  st_linesubstring.html  st_linesubstring.md  st_minimum_bounding_radius.html  st_perimeter.html  st_perimeter_2d.html  st_snap_to_grid.html  st_snap_to_grid.md  st_split.html  st_split.md  st_startpoint.html  (+9 more)
src/: DIFFS  Makevars  Makevars.in  Makevars.ucrt  Makevars.win  README  RcppExports.cpp  geodetic.cpp  geos.cpp  io.cpp  lwgeom.cpp  lwgeom.h  postgis_config.h  postgis_config.h.in  postgis_config.win  postgis_svn_revision.h  proj.cpp  sub.cpp  wkb.cpp
src/liblwgeom/: DIFFS  README  gserialized.c  kmeans.c  liblwgeom.h  lwboundingcircle.c  lwgeodetic_tree.c  lwgeom_api.c  lwgeom_debug.c  lwgeom_geos.c  lwgeom_topo.c  lwgeom_transform.c  lwin_wkt_lex.c  lwout_geojson.c  lwout_gml.c  lwout_svg.c  lwout_x3d.c  lwprint.c  lwutil.c  ptarray.c
tests/: azimuth.R  azimuth.Rout.save  dist.R  dist.Rout.save  geod.R  geod.Rout.save  perimeter.R  perimeter.Rout.save  testthat.R  testthat.Rout.save  twkb.R  twkb.Rout.save
tests/testthat/: test-as_text.R  test-clockwise.R  test_lwgeom.R
